--- a/ProAgil.WebApi/ProAgil.WebApi.csproj
+++ b/ProAgil.WebApi/ProAgil.WebApi.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
    
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.11" />
+   
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
    
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.11">
@@ -17,7 +19,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>   
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
    
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
